<resources>
    <string name="app_name">Caculator</string>
    <string name="key_zero">0</string>
    <string name="key_one">1</string>
    <string name="key_two">2</string>
    <string name="key_three">3</string>
    <string name="key_four">4</string>
    <string name="key_five">5</string>
    <string name="key_six">6</string>
    <string name="key_seven">7</string>
    <string name="key_eight">8</string>
    <string name="key_nine">9</string>
    <string name="key_add">+</string>
    <string name="key_sub">₋</string>
    <string name="key_mul">×</string>
    <string name="key_div">÷</string>
    <string name="key_result">=</string>
    <string name="key_ac">AC</string>
    <string name="key_dot">.</string>
    <string name="key_delete">C</string>
    <string name="text_tip">Tip Caculator</string>

</resources>
